---------------------------------------------------------------------------

Version ??

The manual links to the Object Construction Checker.

---------------------------------------------------------------------------

Version 2.11.0, August 30, 2019

The Checker Framework now uses the Java 9 javac API. The manual describes
how to satisfy this dependency, in a way that works on a Java 8 JVM.
Running the Checker Framework on a Java 9 JVM is not yet supported.

---------------------------------------------------------------------------

Version 2.10.1, August 22, 2019

Closed issues:
1152, 1614, 2031, 2482, 2543, 2587, 2678, 2686, 2690, 2712, 2717, 2713, 2721,
2725, 2729.

---------------------------------------------------------------------------

Version 2.10.0, August 1, 2019

Removed the NullnessRawnessChecker.  Use the NullnessChecker instead.

Closed issues:
435, 939, 1430, 1687, 1771, 1902, 2173, 2345, 2470, 2534, 2606, 2613, 2619,
2633, 2638.

---------------------------------------------------------------------------

Version 2.9.0, July 3, 2019

Renamed the Signedness Checker's @Constant annotation to @SignednessGlb.
Introduced an alias, @SignedPositive, for use by programmers.

Annotated the first argument of Opt.get and Opt.orElseThrow as @NonNull.

Removed meta-annotation @ImplicitFor:
 * Use the new meta-annotation @QualifierForLiteral to replace
   @ImplicitFor(literals, stringpatterns).
 * Use the meta-annotation @DefaultFor to replace @ImplicitFor(typeKinds,
   types).
 * Use the new meta-annotation @UpperBoundFor to specify a qualifier upper
   bound for certain types.
 * You can completely remove @ImplicitFor(typeNames =
   Void.class, literals = LiteralKind.NULL) on bottom qualifiers.
   @DefaultFor(types = Void.class) and @QualifierForLiterals(literals =
   LiteralKind.NULL) are added to the bottom qualifier by default.

Add @DefaultQualifierOnUse and @NoDefaultQualifierOnUse type declaration annotations

New/changed error message keys: