@@ -740,8 +740,8 @@ Partially-annotated libraries
   Warn if a stub file entry could not be found; see Section~\ref{stub-using}.
 \item \<-AstubWarnIfNotFoundIgnoresClasses>
   Don't warn about missing classes (only methods and fields) even when \<-AwarnIfNotFound> is true.
-\item \<-AstubWarnIfOverwritesBytecode>
-  Warn if a stub file entry overwrite bytecode information; see
+\item \<-AstubWarnIfOverridesBytecode>
+  Warn if a stub file entry overrides bytecode information; see
   Section~\ref{stub-using}.
 % This item is repeated above:
 \item \<-AuseDefaultsForUncheckedCode=source>
@@ -1499,7 +1499,7 @@ same methodology in different words.
 %%  LocalWords:  AuseSafeDefaultsForUnannotatedSourceCode beingConstructed
 %%  LocalWords:  AuseDefaultsForUncheckedCode AresolveReflection Ainfer
 %%  LocalWords:  AconservativeUninferredTypeArguments Averbosecfg Acfgviz
-%%  LocalWords:  AstubWarnIfOverwritesBytecode AprintVerboseGenerics
+%%  LocalWords:  AstubWarnIfOverridesBytecode AprintVerboseGenerics
 %%  LocalWords:  AatfDoNotCache AatfCacheSize IntRange AwarnIfNotFound
 %%  LocalWords:  AwarnUnneededSuppressions AshowInferenceSteps BHCJEIBB
 %%  LocalWords:  AstubWarnIfNotFoundIgnoresClasses processOptions getopt
